--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
 
 <section class="sec2" id="about" name="about" class="section-intro section-white">
     <div class="row">
-        <div class="container col-sm-6">
+        <div class="container col-sm-5">
         <h1>About Android Chapter</h1>
         <hr />
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2 spacing">
-            <p class="section-paragraph">Android Chapter in association with DEV HUB, provides a platform for the students to inculcate the culture of Android App Development by getting trained in developing, debugging and deploying Android Apps.</br>
+            <p class="section-paragraph" style="padding-top: 50px;">Android Chapter in association with DEV HUB, provides a platform for the students to inculcate the culture of Android App Development by getting trained in developing, debugging and deploying Android Apps.</br>
             </br>The main aim of the Android Chapter is to provide Training and Resources so as to get certied by Google as Associate Android Developer
             </p>
             </div>
         </div>
         </div>
-        <div class="container col-sm-6">
+        <div class="container col-sm-7">
                 
             <!--login-->
             <iframe style="width: 100%; height: 500px;" src="login.html"></iframe>
