--- a/student.html
+++ b/student.html
@@ -22,16 +22,16 @@
 
 <body>
     <section class="hero" name="top"> 
-
+            <div class="sidenav">
+                    <a href="#"><span class="glyphicon glyphicon-home"></span></a>
+                    <a href="#"><span class="glyphicon glyphicon-user"></span></a>
+                    <a href="#"><span class="glyphicon glyphicon-arrow-left"></span></a>
+                </div>
         <!--navbar-->
         <nav class="navbar navbar-inverse">
                 <div class="navbar-header"></div>
-                <a class="navbar-brand" href="">Welcome to Android Chapter - Member Name |</a>
+                <a class="navbar-brand" href="">Welcome to Android Chapter - Member Name</a>
                 </div>
-                <ul class="nav navbar-nav">
-                        <!--<li class="active"><a href="#">Home</a></li>-->
-                        <li><a href="#">Logout</a></li>
-                </ul>
         </nav>
 
         <div class="container">
@@ -76,5 +76,43 @@
             </div>
         </div>
     </section>
+
+    <!--footer--> 
+ <hr />
+ <section class="section section-gray background-img">
+    <div class="row">
+     <div class="col-sm-8 col-sm-offset-2">
+                  <p class="section-paragraph white">Contact us:</p>
+     <p class="section-paragraph">
+        <a href="#" class="button">android chapter @ gmail.com</a> 
+        <a href="#" class="button" target="_blank">git-hub</a>
+        <a href="#" class="button" target="_blank">facebook</a> 
+        <a href="#" class="button" target="_blank">DEV HUB</a>
+
+       </p>
+     </div>
+   </div>
+   <div class="row">
+     <div class="col-sm-8 col-sm-offset-2 spacing">
+               <a class="hero-down" href="#top">
+         <div class="btn-react"></div>
+           <i class="fa fa-chevron-up"></i>
+       </a>
+     </div>
+   </div>
+ </section>
+
+ <div class="footer">
+   <copyright class="copy fade-in">&copy; 2018 developed by <a href="http://www.linkedin.com/in/kartikeya-malimath-b18441159">Kartikeya</a><a href="https://github.com/KartikeyaMalimath"> Malimath</a>. In association with DEV HUB | VVCE, Mysuru</copyright>
+   
+ </div>
+
+
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.1/velocity.min.js'></script>
+
+  <script  src="js/index.js"></script>
+</body>
 
 </body>
