--- a/adminPanel.html
+++ b/adminPanel.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" >
 
+<!--====================================
+  Author : Kartikeya P Malimath
+  ==================================-->
+
 <head>
   <meta charset="UTF-8">
   <title>Android Chapter | VVCE</title>
@@ -21,8 +25,38 @@
     <div class="sidenav">
         <a href="#"><span class="glyphicon glyphicon-home"></span></a>
         <a href="#"><span class="glyphicon glyphicon-user"></span></a>
-        <a href="#"><span class="glyphicon glyphicon-arrow-left"></span></a>
+        <a href="index.html"><span class="glyphicon glyphicon-arrow-left"></span></a>
         <a href="#"><span class="glyphicon glyphicon-briefcase"></span></a>
+    </div>
+
+    <div class="container">
+        <h3 style="color: white;">Android Chapter Admin Panel</h3>
+        <br/>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="cont">
+                        <h2>hello</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                    <div class="card">
+                            <div class="cont">
+                                <h2>hello</h2>
+                            </div>
+                    </div>
+            </div>
+            <div class="col-md-4">
+                    <div class="card">
+                            <div class="cont">
+                                <h4 style="color:whitesmoke">Members Online</h4>
+                            </div>
+                    </div>
+            </div>
+        </div>
+        
+
     </div>
 
 </body>
