--- a/html/student.html
+++ b/html/student.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" >
 
+<!--====================================
+  Author : Kartikeya P Malimath
+  ==================================-->
+
 <head>
   <meta charset="UTF-8">
   <title>Android Chapter | VVCE</title>
@@ -25,7 +29,7 @@
             <div class="sidenav">
                     <a href="#"><span class="glyphicon glyphicon-home"></span></a>
                     <a href="#"><span class="glyphicon glyphicon-user"></span></a>
-                    <a href="#"><span class="glyphicon glyphicon-arrow-left"></span></a>
+                    <a href="index.html"><span class="glyphicon glyphicon-arrow-left"></span></a>
                 </div>
         <!--navbar-->
         <nav class="navbar navbar-inverse">
@@ -43,9 +47,11 @@
                         <div class="card">
                                 <div class="cont">
                                   <h4><b>John Doe</b></h4> 
-                                  <p>Architect & Engineer</p> 
+                                  <p>Architect & Engineer</p>
+                                  <p><a href="" style="color:black">edit </a><a href="" style="color:black"> Learning </a><a href="" style="color:black"> Developing </a><a href="" style="color:black"> Done </a><a href="" style="color:black"> Delete </a></p>
                                 </div>
                         </div>
+                        <br/>
 
                     </div>
                 </div>
@@ -115,4 +121,4 @@
   <script  src="js/index.js"></script>
 </body>
 
-</body>
+</html>
