--- a/html/login.html
+++ b/html/login.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Snake highlight</title>
+  <title>Android Chapter | Login</title>
   
   
   
@@ -18,7 +18,7 @@
   <div class="container">
     <div class="left">
       <div class="login">Login</div>
-      <div class="eula">By loging in you agree to be the members of Android Chapter</div>
+      <div class="eula">By loging in you agree to be the member of Android Chapter</div>
     </div>
     <div class="right">
       <svg viewBox="0 0 320 300">
@@ -43,9 +43,9 @@
         </defs>
         <path d="m 40,120.00016 239.99984,-3.2e-4 c 0,0 24.99263,0.79932 25.00016,35.00016 0.008,34.20084 -25.00016,35 -25.00016,35 h -239.99984 c 0,-0.0205 -25,4.01348 -25,38.5 0,34.48652 25,38.5 25,38.5 h 215 c 0,0 20,-0.99604 20,-25 0,-24.00396 -20,-25 -20,-25 h -190 c 0,0 -20,1.71033 -20,25 0,24.00396 20,25 20,25 h 168.57143" />
       </svg>
-      <div class="form">
-        <label for="email">Email</label>
-        <input type="email" id="email">
+      <div class="form" method="post" action="login.php">
+        <label for="email">userName</label>
+        <input type="text" id="email">
         <label for="password">Password</label>
         <input type="password" id="password">
         <input type="submit" id="submit" value="Submit">
